# warp-llm-coding-experiments

./: CLAUDE.md  LICENSE  README.md  agents.md  model_research_results.json  package-lock.json  package.json  pyproject.toml  run_experiment.py
experiments/: __init__.py  experiment_01_basic_generation.py
models/: __init__.py
utils/: __init__.py  fetch_model_info.py  model_modifiers.py  model_size_estimator.py
