[project]
name = "warp-llm-experiments"
version = "0.1.0"
description = "LLM experimentation framework with model modification capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tokenizers>=0.13.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "huggingface-hub>=0.16.0",
    "llama-cpp-python>=0.2.0",
]

[project.optional-dependencies]
quantization = [
    "bitsandbytes>=0.41.0",  # Optional for Linux/Windows quantization
]
